turnbound-re: connect expedition tracking to visible patrol